[tool.poetry]
name = "meter-iq-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.3"
werkzeug = "3.0.3"
PyJWT = "2.8.0"
bcrypt = "4.0.1"
numpy = "1.26.4"
pandas = "2.1.4"
openpyxl = "3.1.2"
gunicorn = "*"
matplotlib = "3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
